--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 51 points<br>
+Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 52 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -41,6 +41,7 @@ Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -66,38 +67,38 @@ Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1839 rev-parse
-   1803 symbolic-ref
-   1799 ls-files
-     92 status
-     57 checkout
-     34 log
-     32 pull
+   1987 rev-parse
+   1951 symbolic-ref
+   1947 ls-files
+    111 status
+     59 checkout
+     37 log
+     35 pull
      31 branch
-     26 add
-     23 commit
+     29 add
+     26 commit
      19 tag
      18 achievements
-     15 help
-     12 diff
-      9 push
+     17 diff
+     16 help
+     11 push
+      9 show
+      7 fetch
       7 config
       6 submodule
       5 init
-      5 fetch
-      4 show
+      4 stash
       4 reset
       4 merge
       2 whatchanged
       2 Wed
-      2 stash
       2 rebase
       2 gc
       2 format-patch
+      2 clone
       2 blame
       1 rm
       1 grep
-      1 clone
       1 clean
       1 cherry-pick
 </pre>
